2006-03-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* java/rmi/server/UID.java (constructor): Assing last and time fields
 	after pause.

2006-03-07  Tom Tromey  <tromey@redhat.com>

	* java/lang/System.java (clearProperty): New method, merged from
	generics branch.
	(getProperty): Removed 'else'.
	(getProperty): Check for empty key.
	(setProperty): Likewise.
	* gnu/classpath/SystemProperties.java (remove): New method, merged
	from generics branch.

2006-03-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* java/rmi/server/UID.java: New file (replacing). 

2006-03-08  Raif S. Naffah  <raif@swiftdsl.com.au>

	* java/util/jar/Manifest.java: Removed unused imports.
	(CRLF): New constant.
	(read): Added method documentation.
	Use UTF-8 encoding instead of 8859_1.
	(write): Added method documentation.
	Use BufferedOutputStream (w/ 4K buffer) instead of PrintWriter.
	(write_main_section): Replace PrintWriter arg with OutputStream.
	Replace JarException with IOException.
	(write_version_info): Likewise.
	(write_main_attributes): Likewise.
	(write_attribute_entry): Likewise.
	(write_individual_sections): Likewise.
	(write_entry_attributes): Likewise.
	(write_header): Replace PrintWriter arg with OutputStream.
	Re-implemented.

2006-03-07  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/tree/DefaultMutableTreeNode.java
	(getFirstChild): Updated API docs,
	(getLastChild): Likewise,
	(getChildAfter): Likewise,
	(getChildBefore): Likewise,
	(isNodeSibling): Return true if node == this,
	(getSiblingCount): Updated API docs,
	(getNextSibling): Likewise,
	(getPreviousSibling): Likewise,
	(isLeaf): Likewise,
	(getFirstLeaf): Likewise,
	(getLastLeaf): Likewise,
	(getNextLeaf): Implemented,
	(getPreviousLeaf): Implemented.

2006-03-07  Tom Tromey  <tromey@redhat.com>

	* java/awt/image/ColorModel.java (getComponents): Javadoc fix.
	* java/awt/datatransfer/FlavorEvent.java: Added missing @since.